// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`appointment AppointmentContent should match snapshot when has appointments 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
       
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.h2
            classname="mock-css."
          >
            Location
          </mock-styled.h2>
          <mock-styled.div>
            <mock-styled.button
              classname="mock-css."
            >
              <mock-styled.div />
              MAP
            </mock-styled.button>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.input
                classname=""
                placeholder="Enter location"
                value=""
              />
            </mock-styled.div>
            <mock-styled.div
              classname=""
            />
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname="mock-css."
      >
        <mock-styled.div
          classname="mock-css.
  margin: 0 auto;
"
        >
          <mock-styled.input
            id="today"
            name="appointment-time"
            type="radio"
            value="TODAY"
          />
          <mock-styled.label
            classname=""
            htmlfor="today"
          >
            <mock-styled.span>
              Today
            </mock-styled.span>
          </mock-styled.label>
          <mock-styled.input
            id="tomorrow"
            name="appointment-time"
            type="radio"
            value="TOMORROW"
          />
          <mock-styled.label
            classname=""
            htmlfor="tomorrow"
          >
            <mock-styled.span>
              Tomorrow
            </mock-styled.span>
          </mock-styled.label>
          <mock-styled.input
            id="week"
            name="appointment-time"
            type="radio"
            value="WEEK"
          />
          <mock-styled.label
            classname=""
            htmlfor="week"
          >
            <mock-styled.span>
              Week
            </mock-styled.span>
          </mock-styled.label>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname="mock-css.
  transform: translate3d(-100%, 0, 0);
  animation: slide-in 0.35s forwards;

  @keyframes slide-in {
    100% {
      transform: translate3d(0%, 0, 0);
    }
  }
"
      >
        <div
          class="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
"
        >
          <div>
            <mock-styled.div
              classname="mock-css.
  * {
    color: #646464;
  }
 mock-css.
  margin-bottom: 1rem;
"
            >
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.h5>
                  undefined - undefined - Cancelled 
                </mock-styled.h5>
                <mock-styled.h6>
                  Appointment
                </mock-styled.h6>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
              >
                <mock-styled.div>
                  <mock-styled.span
                    classname="mock-css. mock-css.
  font-size: 1.5rem;
"
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Notes
                  </mock-styled.div>
                  <mock-styled.div>
                    Add Follow Up Notes
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </div>
          <div>
            <mock-styled.div
              classname="mock-css.
  * {
    color: #646464;
  }
 mock-css.
  margin-bottom: 1rem;
"
            >
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.h5>
                  undefined - undefined - Cancelled 
                </mock-styled.h5>
                <mock-styled.h6>
                  Viewing
                </mock-styled.h6>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
              >
                <mock-styled.div>
                  <mock-styled.span
                    classname="mock-css. mock-css.
  font-size: 1.5rem;
"
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Notes
                  </mock-styled.div>
                  <mock-styled.div>
                    Add Follow Up Notes
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </div>
          <div>
            <mock-styled.div
              classname="mock-css.
  margin-bottom: 1rem;
"
            >
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.h5>
                  undefined - undefined
                </mock-styled.h5>
                <mock-styled.h6>
                  Viewing
                </mock-styled.h6>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
              >
                <mock-styled.div>
                  <mock-styled.span
                    classname=""
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Property
                  </mock-styled.div>
                  <mock-styled.div>
                    Yew Tree Cottage Church Walk
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
              >
                <mock-styled.div>
                  <mock-styled.span
                    classname=""
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Attendee
                  </mock-styled.div>
                  <mock-styled.div>
                    Ms Harper Dale
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
              >
                <mock-styled.div>
                  <mock-styled.span
                    classname=""
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Attendee
                  </mock-styled.div>
                  <mock-styled.div>
                    Mr Teddy Allan
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
              >
                <mock-styled.div>
                  <mock-styled.span
                    classname="mock-css. mock-css.
  font-size: 1.5rem;
"
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Notes
                  </mock-styled.div>
                  <mock-styled.div>
                    Add Follow Up Notes
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
              >
                <mock-styled.div>
                  <mock-styled.span
                    classname="mock-css. mock-css.
  font-size: 1.5rem;
"
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Cancel
                  </mock-styled.div>
                  <mock-styled.div>
                    Cancel This Appointment
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </div>
          <div>
            <mock-styled.div
              classname="mock-css.
  margin-bottom: 1rem;
"
            >
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.h5>
                  undefined - undefined
                </mock-styled.h5>
                <mock-styled.h6>
                  Viewing
                </mock-styled.h6>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
              >
                <mock-styled.div>
                  <mock-styled.span
                    classname=""
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Property
                  </mock-styled.div>
                  <mock-styled.div>
                    Belmont Hanover Farm
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
              >
                <mock-styled.div>
                  <mock-styled.span
                    classname=""
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Attendee
                  </mock-styled.div>
                  <mock-styled.div>
                    Mr Ronnie Akhtar
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
              >
                <mock-styled.div>
                  <mock-styled.span
                    classname="mock-css. mock-css.
  font-size: 1.5rem;
"
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Notes
                  </mock-styled.div>
                  <mock-styled.div>
                    Add Follow Up Notes
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
              >
                <mock-styled.div>
                  <mock-styled.span
                    classname="mock-css. mock-css.
  font-size: 1.5rem;
"
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Cancel
                  </mock-styled.div>
                  <mock-styled.div>
                    Cancel This Appointment
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </div>
          <div>
            <mock-styled.div
              classname="mock-css.
  margin-bottom: 1rem;
"
            >
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.h5>
                  undefined - undefined
                </mock-styled.h5>
                <mock-styled.h6>
                  Viewing
                </mock-styled.h6>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
              >
                <mock-styled.div>
                  <mock-styled.span
                    classname=""
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Property
                  </mock-styled.div>
                  <mock-styled.div>
                    78 Wadworth Holme
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
              >
                <mock-styled.div>
                  <mock-styled.span
                    classname=""
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Attendee
                  </mock-styled.div>
                  <mock-styled.div>
                    Ms Poppy Beggs
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
              >
                <mock-styled.div>
                  <mock-styled.span
                    classname="mock-css. mock-css.
  font-size: 1.5rem;
"
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Notes
                  </mock-styled.div>
                  <mock-styled.div>
                    Add Follow Up Notes
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
              >
                <mock-styled.div>
                  <mock-styled.span
                    classname="mock-css. mock-css.
  font-size: 1.5rem;
"
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Cancel
                  </mock-styled.div>
                  <mock-styled.div>
                    Cancel This Appointment
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </div>
          <div>
            <mock-styled.div
              classname="mock-css.
  margin-bottom: 1rem;
"
            >
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.h5>
                  undefined - undefined
                </mock-styled.h5>
                <mock-styled.h6>
                  Viewing
                </mock-styled.h6>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
              >
                <mock-styled.div>
                  <mock-styled.span
                    classname=""
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Property
                  </mock-styled.div>
                  <mock-styled.div>
                    Sunnyside St. Rumbolds Lane
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
              >
                <mock-styled.div>
                  <mock-styled.span
                    classname=""
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Attendee
                  </mock-styled.div>
                  <mock-styled.div>
                    Mr Elijah Brown
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
              >
                <mock-styled.div>
                  <mock-styled.span
                    classname="mock-css. mock-css.
  font-size: 1.5rem;
"
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Notes
                  </mock-styled.div>
                  <mock-styled.div>
                    Add Follow Up Notes
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
              >
                <mock-styled.div>
                  <mock-styled.span
                    classname="mock-css. mock-css.
  font-size: 1.5rem;
"
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Cancel
                  </mock-styled.div>
                  <mock-styled.div>
                    Cancel This Appointment
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </div>
          <div>
            <mock-styled.div
              classname="mock-css.
  margin-bottom: 1rem;
"
            >
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.h5>
                  undefined - undefined
                </mock-styled.h5>
                <mock-styled.h6>
                  Appointment
                </mock-styled.h6>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
              >
                <mock-styled.div>
                  <mock-styled.span
                    classname=""
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Attendee
                  </mock-styled.div>
                  <mock-styled.div>
                    Mr Jenson Brown
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
              >
                <mock-styled.div>
                  <mock-styled.span
                    classname="mock-css. mock-css.
  font-size: 1.5rem;
"
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Notes
                  </mock-styled.div>
                  <mock-styled.div>
                    Add Follow Up Notes
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
              >
                <mock-styled.div>
                  <mock-styled.span
                    classname="mock-css. mock-css.
  font-size: 1.5rem;
"
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Cancel
                  </mock-styled.div>
                  <mock-styled.div>
                    Cancel This Appointment
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </div>
          <div>
            <mock-styled.div
              classname="mock-css.
  margin-bottom: 1rem;
"
            >
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.h5>
                  undefined - undefined
                </mock-styled.h5>
                <mock-styled.h6>
                  Viewing
                </mock-styled.h6>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
              >
                <mock-styled.div>
                  <mock-styled.span
                    classname=""
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Property
                  </mock-styled.div>
                  <mock-styled.div>
                    90 Bromham Road
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
              >
                <mock-styled.div>
                  <mock-styled.span
                    classname=""
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Attendee
                  </mock-styled.div>
                  <mock-styled.div>
                    Mr Colton Jackson
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
              >
                <mock-styled.div>
                  <mock-styled.span
                    classname="mock-css. mock-css.
  font-size: 1.5rem;
"
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Notes
                  </mock-styled.div>
                  <mock-styled.div>
                    Add Follow Up Notes
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
              >
                <mock-styled.div>
                  <mock-styled.span
                    classname="mock-css. mock-css.
  font-size: 1.5rem;
"
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div>
                    Cancel
                  </mock-styled.div>
                  <mock-styled.div>
                    Cancel This Appointment
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </div>
        </div>
      </mock-styled.div>
      <div
        class="mock-css.
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: -1;
  transition: 0.35s;

  @media (min-width: 769px) {
    width: ,;
  }
"
      />
      <div
        class="mock-css.
  position: fixed;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  height: auto;
  max-height: 100%;
  overflow: scroll;
  background: white;
  box-shadow: 2px 4px 20px rgba(0, 0, 0, 0.05);
  padding-bottom: ,;
  transition: 0.35s;
  opacity: 0;
  transform: translateY(100%);
  z-index: -2;
  -ms-overflow-style: none;
  scrollbar-width: none;

  &::-webkit-scrollbar {
    display: none;
  }

  @media (min-width: 769px) {
    width: ,;
  }
"
      />
      <mock-styled.div>
        <mock-styled.div
          classname=""
        />
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.input
              checked="true"
              id="travel-mode"
              type="checkbox"
            />
            <mock-styled.label
              htmlfor="travel-mode"
            >
              <img
                src="[object Object]"
              />
              <img
                src="[object Object]"
              />
            </mock-styled.label>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.h2
              classname="mock-css."
            >
              ETA
            </mock-styled.h2>
            <p />
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.h2
              classname="mock-css."
            >
              Distance
            </mock-styled.h2>
            <p />
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.button
              classname="mock-css."
              type="button"
            >
              <mock-styled.div />
              Start Journey
            </mock-styled.button>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
     
    <mock-styled.div>
      <mock-styled.div>
        <mock-styled.h2
          classname="mock-css."
        >
          Location
        </mock-styled.h2>
        <mock-styled.div>
          <mock-styled.button
            classname="mock-css."
          >
            <mock-styled.div />
            MAP
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.input
              classname=""
              placeholder="Enter location"
              value=""
            />
          </mock-styled.div>
          <mock-styled.div
            classname=""
          />
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
    <mock-styled.div
      classname="mock-css."
    >
      <mock-styled.div
        classname="mock-css.
  margin: 0 auto;
"
      >
        <mock-styled.input
          id="today"
          name="appointment-time"
          type="radio"
          value="TODAY"
        />
        <mock-styled.label
          classname=""
          htmlfor="today"
        >
          <mock-styled.span>
            Today
          </mock-styled.span>
        </mock-styled.label>
        <mock-styled.input
          id="tomorrow"
          name="appointment-time"
          type="radio"
          value="TOMORROW"
        />
        <mock-styled.label
          classname=""
          htmlfor="tomorrow"
        >
          <mock-styled.span>
            Tomorrow
          </mock-styled.span>
        </mock-styled.label>
        <mock-styled.input
          id="week"
          name="appointment-time"
          type="radio"
          value="WEEK"
        />
        <mock-styled.label
          classname=""
          htmlfor="week"
        >
          <mock-styled.span>
            Week
          </mock-styled.span>
        </mock-styled.label>
      </mock-styled.div>
    </mock-styled.div>
    <mock-styled.div
      classname="mock-css.
  transform: translate3d(-100%, 0, 0);
  animation: slide-in 0.35s forwards;

  @keyframes slide-in {
    100% {
      transform: translate3d(0%, 0, 0);
    }
  }
"
    >
      <div
        class="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
"
      >
        <div>
          <mock-styled.div
            classname="mock-css.
  * {
    color: #646464;
  }
 mock-css.
  margin-bottom: 1rem;
"
          >
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.h5>
                undefined - undefined - Cancelled 
              </mock-styled.h5>
              <mock-styled.h6>
                Appointment
              </mock-styled.h6>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
            >
              <mock-styled.div>
                <mock-styled.span
                  classname="mock-css. mock-css.
  font-size: 1.5rem;
"
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  Notes
                </mock-styled.div>
                <mock-styled.div>
                  Add Follow Up Notes
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </div>
        <div>
          <mock-styled.div
            classname="mock-css.
  * {
    color: #646464;
  }
 mock-css.
  margin-bottom: 1rem;
"
          >
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.h5>
                undefined - undefined - Cancelled 
              </mock-styled.h5>
              <mock-styled.h6>
                Viewing
              </mock-styled.h6>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
            >
              <mock-styled.div>
                <mock-styled.span
                  classname="mock-css. mock-css.
  font-size: 1.5rem;
"
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  Notes
                </mock-styled.div>
                <mock-styled.div>
                  Add Follow Up Notes
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </div>
        <div>
          <mock-styled.div
            classname="mock-css.
  margin-bottom: 1rem;
"
          >
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.h5>
                undefined - undefined
              </mock-styled.h5>
              <mock-styled.h6>
                Viewing
              </mock-styled.h6>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
            >
              <mock-styled.div>
                <mock-styled.span
                  classname=""
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  Property
                </mock-styled.div>
                <mock-styled.div>
                  Yew Tree Cottage Church Walk
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
            >
              <mock-styled.div>
                <mock-styled.span
                  classname=""
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  Attendee
                </mock-styled.div>
                <mock-styled.div>
                  Ms Harper Dale
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
            >
              <mock-styled.div>
                <mock-styled.span
                  classname=""
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  Attendee
                </mock-styled.div>
                <mock-styled.div>
                  Mr Teddy Allan
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
            >
              <mock-styled.div>
                <mock-styled.span
                  classname="mock-css. mock-css.
  font-size: 1.5rem;
"
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  Notes
                </mock-styled.div>
                <mock-styled.div>
                  Add Follow Up Notes
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
            >
              <mock-styled.div>
                <mock-styled.span
                  classname="mock-css. mock-css.
  font-size: 1.5rem;
"
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  Cancel
                </mock-styled.div>
                <mock-styled.div>
                  Cancel This Appointment
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </div>
        <div>
          <mock-styled.div
            classname="mock-css.
  margin-bottom: 1rem;
"
          >
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.h5>
                undefined - undefined
              </mock-styled.h5>
              <mock-styled.h6>
                Viewing
              </mock-styled.h6>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
            >
              <mock-styled.div>
                <mock-styled.span
                  classname=""
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  Property
                </mock-styled.div>
                <mock-styled.div>
                  Belmont Hanover Farm
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
            >
              <mock-styled.div>
                <mock-styled.span
                  classname=""
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  Attendee
                </mock-styled.div>
                <mock-styled.div>
                  Mr Ronnie Akhtar
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
            >
              <mock-styled.div>
                <mock-styled.span
                  classname="mock-css. mock-css.
  font-size: 1.5rem;
"
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  Notes
                </mock-styled.div>
                <mock-styled.div>
                  Add Follow Up Notes
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
            >
              <mock-styled.div>
                <mock-styled.span
                  classname="mock-css. mock-css.
  font-size: 1.5rem;
"
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  Cancel
                </mock-styled.div>
                <mock-styled.div>
                  Cancel This Appointment
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </div>
        <div>
          <mock-styled.div
            classname="mock-css.
  margin-bottom: 1rem;
"
          >
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.h5>
                undefined - undefined
              </mock-styled.h5>
              <mock-styled.h6>
                Viewing
              </mock-styled.h6>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
            >
              <mock-styled.div>
                <mock-styled.span
                  classname=""
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  Property
                </mock-styled.div>
                <mock-styled.div>
                  78 Wadworth Holme
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
            >
              <mock-styled.div>
                <mock-styled.span
                  classname=""
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  Attendee
                </mock-styled.div>
                <mock-styled.div>
                  Ms Poppy Beggs
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
            >
              <mock-styled.div>
                <mock-styled.span
                  classname="mock-css. mock-css.
  font-size: 1.5rem;
"
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  Notes
                </mock-styled.div>
                <mock-styled.div>
                  Add Follow Up Notes
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
            >
              <mock-styled.div>
                <mock-styled.span
                  classname="mock-css. mock-css.
  font-size: 1.5rem;
"
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  Cancel
                </mock-styled.div>
                <mock-styled.div>
                  Cancel This Appointment
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </div>
        <div>
          <mock-styled.div
            classname="mock-css.
  margin-bottom: 1rem;
"
          >
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.h5>
                undefined - undefined
              </mock-styled.h5>
              <mock-styled.h6>
                Viewing
              </mock-styled.h6>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
            >
              <mock-styled.div>
                <mock-styled.span
                  classname=""
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  Property
                </mock-styled.div>
                <mock-styled.div>
                  Sunnyside St. Rumbolds Lane
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
            >
              <mock-styled.div>
                <mock-styled.span
                  classname=""
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  Attendee
                </mock-styled.div>
                <mock-styled.div>
                  Mr Elijah Brown
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
            >
              <mock-styled.div>
                <mock-styled.span
                  classname="mock-css. mock-css.
  font-size: 1.5rem;
"
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  Notes
                </mock-styled.div>
                <mock-styled.div>
                  Add Follow Up Notes
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
            >
              <mock-styled.div>
                <mock-styled.span
                  classname="mock-css. mock-css.
  font-size: 1.5rem;
"
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  Cancel
                </mock-styled.div>
                <mock-styled.div>
                  Cancel This Appointment
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </div>
        <div>
          <mock-styled.div
            classname="mock-css.
  margin-bottom: 1rem;
"
          >
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.h5>
                undefined - undefined
              </mock-styled.h5>
              <mock-styled.h6>
                Appointment
              </mock-styled.h6>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
            >
              <mock-styled.div>
                <mock-styled.span
                  classname=""
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  Attendee
                </mock-styled.div>
                <mock-styled.div>
                  Mr Jenson Brown
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
            >
              <mock-styled.div>
                <mock-styled.span
                  classname="mock-css. mock-css.
  font-size: 1.5rem;
"
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  Notes
                </mock-styled.div>
                <mock-styled.div>
                  Add Follow Up Notes
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
            >
              <mock-styled.div>
                <mock-styled.span
                  classname="mock-css. mock-css.
  font-size: 1.5rem;
"
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  Cancel
                </mock-styled.div>
                <mock-styled.div>
                  Cancel This Appointment
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </div>
        <div>
          <mock-styled.div
            classname="mock-css.
  margin-bottom: 1rem;
"
          >
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.h5>
                undefined - undefined
              </mock-styled.h5>
              <mock-styled.h6>
                Viewing
              </mock-styled.h6>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
            >
              <mock-styled.div>
                <mock-styled.span
                  classname=""
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  Property
                </mock-styled.div>
                <mock-styled.div>
                  90 Bromham Road
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
            >
              <mock-styled.div>
                <mock-styled.span
                  classname=""
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  Attendee
                </mock-styled.div>
                <mock-styled.div>
                  Mr Colton Jackson
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
            >
              <mock-styled.div>
                <mock-styled.span
                  classname="mock-css. mock-css.
  font-size: 1.5rem;
"
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  Notes
                </mock-styled.div>
                <mock-styled.div>
                  Add Follow Up Notes
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css.
  height: 2.5rem;
  margin-bottom: 0.5rem;

  &:last-of-type {
    margin-bottom: 0;
  }
"
            >
              <mock-styled.div>
                <mock-styled.span
                  classname="mock-css. mock-css.
  font-size: 1.5rem;
"
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.div>
                  Cancel
                </mock-styled.div>
                <mock-styled.div>
                  Cancel This Appointment
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </div>
      </div>
    </mock-styled.div>
    <div
      class="mock-css.
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: -1;
  transition: 0.35s;

  @media (min-width: 769px) {
    width: ,;
  }
"
    />
    <div
      class="mock-css.
  position: fixed;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  height: auto;
  max-height: 100%;
  overflow: scroll;
  background: white;
  box-shadow: 2px 4px 20px rgba(0, 0, 0, 0.05);
  padding-bottom: ,;
  transition: 0.35s;
  opacity: 0;
  transform: translateY(100%);
  z-index: -2;
  -ms-overflow-style: none;
  scrollbar-width: none;

  &::-webkit-scrollbar {
    display: none;
  }

  @media (min-width: 769px) {
    width: ,;
  }
"
    />
    <mock-styled.div>
      <mock-styled.div
        classname=""
      />
      <mock-styled.div
        classname=""
      >
        <mock-styled.div>
          <mock-styled.input
            checked="true"
            id="travel-mode"
            type="checkbox"
          />
          <mock-styled.label
            htmlfor="travel-mode"
          >
            <img
              src="[object Object]"
            />
            <img
              src="[object Object]"
            />
          </mock-styled.label>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.h2
            classname="mock-css."
          >
            ETA
          </mock-styled.h2>
          <p />
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.h2
            classname="mock-css."
          >
            Distance
          </mock-styled.h2>
          <p />
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.button
            classname="mock-css."
            type="button"
          >
            <mock-styled.div />
            Start Journey
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`appointment AppointmentContent should match snapshot when loading 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
       
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.h2
            classname="mock-css."
          >
            Location
          </mock-styled.h2>
          <mock-styled.div>
            <mock-styled.button
              classname="mock-css."
            >
              <mock-styled.div />
              MAP
            </mock-styled.button>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.input
                classname=""
                placeholder="Enter location"
                value=""
              />
            </mock-styled.div>
            <mock-styled.div
              classname=""
            />
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname="mock-css."
      >
        <mock-styled.div
          classname="mock-css.
  margin: 0 auto;
"
        >
          <mock-styled.input
            id="today"
            name="appointment-time"
            type="radio"
            value="TODAY"
          />
          <mock-styled.label
            classname=""
            htmlfor="today"
          >
            <mock-styled.span>
              Today
            </mock-styled.span>
          </mock-styled.label>
          <mock-styled.input
            id="tomorrow"
            name="appointment-time"
            type="radio"
            value="TOMORROW"
          />
          <mock-styled.label
            classname=""
            htmlfor="tomorrow"
          >
            <mock-styled.span>
              Tomorrow
            </mock-styled.span>
          </mock-styled.label>
          <mock-styled.input
            id="week"
            name="appointment-time"
            type="radio"
            value="WEEK"
          />
          <mock-styled.label
            classname=""
            htmlfor="week"
          >
            <mock-styled.span>
              Week
            </mock-styled.span>
          </mock-styled.label>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname="mock-css.
  transform: translate3d(-100%, 0, 0);
  animation: slide-in 0.35s forwards;

  @keyframes slide-in {
    100% {
      transform: translate3d(0%, 0, 0);
    }
  }
"
      >
        <mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.div />
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <div
        class="mock-css.
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: -1;
  transition: 0.35s;

  @media (min-width: 769px) {
    width: ,;
  }
"
      />
      <div
        class="mock-css.
  position: fixed;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  height: auto;
  max-height: 100%;
  overflow: scroll;
  background: white;
  box-shadow: 2px 4px 20px rgba(0, 0, 0, 0.05);
  padding-bottom: ,;
  transition: 0.35s;
  opacity: 0;
  transform: translateY(100%);
  z-index: -2;
  -ms-overflow-style: none;
  scrollbar-width: none;

  &::-webkit-scrollbar {
    display: none;
  }

  @media (min-width: 769px) {
    width: ,;
  }
"
      />
      <mock-styled.div>
        <mock-styled.div
          classname=""
        />
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.input
              checked="true"
              id="travel-mode"
              type="checkbox"
            />
            <mock-styled.label
              htmlfor="travel-mode"
            >
              <img
                src="[object Object]"
              />
              <img
                src="[object Object]"
              />
            </mock-styled.label>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.h2
              classname="mock-css."
            >
              ETA
            </mock-styled.h2>
            <p />
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.h2
              classname="mock-css."
            >
              Distance
            </mock-styled.h2>
            <p />
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.button
              classname="mock-css."
              type="button"
            >
              <mock-styled.div />
              Start Journey
            </mock-styled.button>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
     
    <mock-styled.div>
      <mock-styled.div>
        <mock-styled.h2
          classname="mock-css."
        >
          Location
        </mock-styled.h2>
        <mock-styled.div>
          <mock-styled.button
            classname="mock-css."
          >
            <mock-styled.div />
            MAP
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.input
              classname=""
              placeholder="Enter location"
              value=""
            />
          </mock-styled.div>
          <mock-styled.div
            classname=""
          />
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
    <mock-styled.div
      classname="mock-css."
    >
      <mock-styled.div
        classname="mock-css.
  margin: 0 auto;
"
      >
        <mock-styled.input
          id="today"
          name="appointment-time"
          type="radio"
          value="TODAY"
        />
        <mock-styled.label
          classname=""
          htmlfor="today"
        >
          <mock-styled.span>
            Today
          </mock-styled.span>
        </mock-styled.label>
        <mock-styled.input
          id="tomorrow"
          name="appointment-time"
          type="radio"
          value="TOMORROW"
        />
        <mock-styled.label
          classname=""
          htmlfor="tomorrow"
        >
          <mock-styled.span>
            Tomorrow
          </mock-styled.span>
        </mock-styled.label>
        <mock-styled.input
          id="week"
          name="appointment-time"
          type="radio"
          value="WEEK"
        />
        <mock-styled.label
          classname=""
          htmlfor="week"
        >
          <mock-styled.span>
            Week
          </mock-styled.span>
        </mock-styled.label>
      </mock-styled.div>
    </mock-styled.div>
    <mock-styled.div
      classname="mock-css.
  transform: translate3d(-100%, 0, 0);
  animation: slide-in 0.35s forwards;

  @keyframes slide-in {
    100% {
      transform: translate3d(0%, 0, 0);
    }
  }
"
    >
      <mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.div />
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
    <div
      class="mock-css.
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: -1;
  transition: 0.35s;

  @media (min-width: 769px) {
    width: ,;
  }
"
    />
    <div
      class="mock-css.
  position: fixed;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  height: auto;
  max-height: 100%;
  overflow: scroll;
  background: white;
  box-shadow: 2px 4px 20px rgba(0, 0, 0, 0.05);
  padding-bottom: ,;
  transition: 0.35s;
  opacity: 0;
  transform: translateY(100%);
  z-index: -2;
  -ms-overflow-style: none;
  scrollbar-width: none;

  &::-webkit-scrollbar {
    display: none;
  }

  @media (min-width: 769px) {
    width: ,;
  }
"
    />
    <mock-styled.div>
      <mock-styled.div
        classname=""
      />
      <mock-styled.div
        classname=""
      >
        <mock-styled.div>
          <mock-styled.input
            checked="true"
            id="travel-mode"
            type="checkbox"
          />
          <mock-styled.label
            htmlfor="travel-mode"
          >
            <img
              src="[object Object]"
            />
            <img
              src="[object Object]"
            />
          </mock-styled.label>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.h2
            classname="mock-css."
          >
            ETA
          </mock-styled.h2>
          <p />
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.h2
            classname="mock-css."
          >
            Distance
          </mock-styled.h2>
          <p />
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.button
            classname="mock-css."
            type="button"
          >
            <mock-styled.div />
            Start Journey
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`appointment Apppointment should match snapshot with an empty query 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
       
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.h2
            classname="mock-css."
          >
            Location
          </mock-styled.h2>
          <mock-styled.div>
            <mock-styled.button
              classname="mock-css."
            >
              <mock-styled.div />
              MAP
            </mock-styled.button>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.input
                classname=""
                placeholder="Enter location"
                value=""
              />
            </mock-styled.div>
            <mock-styled.div
              classname=""
            />
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname="mock-css."
      >
        <mock-styled.div
          classname="mock-css.
  margin: 0 auto;
"
        >
          <mock-styled.input
            id="today"
            name="appointment-time"
            type="radio"
            value="TODAY"
          />
          <mock-styled.label
            classname=""
            htmlfor="today"
          >
            <mock-styled.span>
              Today
            </mock-styled.span>
          </mock-styled.label>
          <mock-styled.input
            id="tomorrow"
            name="appointment-time"
            type="radio"
            value="TOMORROW"
          />
          <mock-styled.label
            classname=""
            htmlfor="tomorrow"
          >
            <mock-styled.span>
              Tomorrow
            </mock-styled.span>
          </mock-styled.label>
          <mock-styled.input
            id="week"
            name="appointment-time"
            type="radio"
            value="WEEK"
          />
          <mock-styled.label
            classname=""
            htmlfor="week"
          >
            <mock-styled.span>
              Week
            </mock-styled.span>
          </mock-styled.label>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname="mock-css.
  transform: translate3d(-100%, 0, 0);
  animation: slide-in 0.35s forwards;

  @keyframes slide-in {
    100% {
      transform: translate3d(0%, 0, 0);
    }
  }
"
      >
        <div
          class="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
"
        >
          <mock-styled.div
            classname="mock-css. mock-css. mock-css. mock-css."
          >
            <div
              class="mock-css.
  padding-left: 0.75rem;
  display: flex;
  align-items: center;
  border-radius: var(--default-border-radius) 0 0 var(--default-border-radius);
  cursor: pointer;

  , {
    color: var(--color-white);
  }
"
              data-testid="close-icon"
            >
              <mock-styled.span
                classname="mock-css.
  font-size: 1.5rem;
"
                style="font-size: 1.25rem;"
              >
                <svg
                  style="font-size: 1.25rem;"
                />
              </mock-styled.span>
            </div>
            <div
              class="mock-css.
  padding: 0.75rem;
  transition: 0.5s;
  width: 100%;
  color: var(--color-black);
  font-size: var(--font-size-default);
"
            >
              No appointments
            </div>
          </mock-styled.div>
        </div>
      </mock-styled.div>
      <div
        class="mock-css.
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: -1;
  transition: 0.35s;

  @media (min-width: 769px) {
    width: ,;
  }
"
      />
      <div
        class="mock-css.
  position: fixed;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  height: auto;
  max-height: 100%;
  overflow: scroll;
  background: white;
  box-shadow: 2px 4px 20px rgba(0, 0, 0, 0.05);
  padding-bottom: ,;
  transition: 0.35s;
  opacity: 0;
  transform: translateY(100%);
  z-index: -2;
  -ms-overflow-style: none;
  scrollbar-width: none;

  &::-webkit-scrollbar {
    display: none;
  }

  @media (min-width: 769px) {
    width: ,;
  }
"
      />
      <mock-styled.div>
        <mock-styled.div
          classname=""
        />
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.input
              checked="true"
              id="travel-mode"
              type="checkbox"
            />
            <mock-styled.label
              htmlfor="travel-mode"
            >
              <img
                src="[object Object]"
              />
              <img
                src="[object Object]"
              />
            </mock-styled.label>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.h2
              classname="mock-css."
            >
              ETA
            </mock-styled.h2>
            <p />
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.h2
              classname="mock-css."
            >
              Distance
            </mock-styled.h2>
            <p />
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.button
              classname="mock-css."
              type="button"
            >
              <mock-styled.div />
              Start Journey
            </mock-styled.button>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
     
    <mock-styled.div>
      <mock-styled.div>
        <mock-styled.h2
          classname="mock-css."
        >
          Location
        </mock-styled.h2>
        <mock-styled.div>
          <mock-styled.button
            classname="mock-css."
          >
            <mock-styled.div />
            MAP
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.input
              classname=""
              placeholder="Enter location"
              value=""
            />
          </mock-styled.div>
          <mock-styled.div
            classname=""
          />
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
    <mock-styled.div
      classname="mock-css."
    >
      <mock-styled.div
        classname="mock-css.
  margin: 0 auto;
"
      >
        <mock-styled.input
          id="today"
          name="appointment-time"
          type="radio"
          value="TODAY"
        />
        <mock-styled.label
          classname=""
          htmlfor="today"
        >
          <mock-styled.span>
            Today
          </mock-styled.span>
        </mock-styled.label>
        <mock-styled.input
          id="tomorrow"
          name="appointment-time"
          type="radio"
          value="TOMORROW"
        />
        <mock-styled.label
          classname=""
          htmlfor="tomorrow"
        >
          <mock-styled.span>
            Tomorrow
          </mock-styled.span>
        </mock-styled.label>
        <mock-styled.input
          id="week"
          name="appointment-time"
          type="radio"
          value="WEEK"
        />
        <mock-styled.label
          classname=""
          htmlfor="week"
        >
          <mock-styled.span>
            Week
          </mock-styled.span>
        </mock-styled.label>
      </mock-styled.div>
    </mock-styled.div>
    <mock-styled.div
      classname="mock-css.
  transform: translate3d(-100%, 0, 0);
  animation: slide-in 0.35s forwards;

  @keyframes slide-in {
    100% {
      transform: translate3d(0%, 0, 0);
    }
  }
"
    >
      <div
        class="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
"
      >
        <mock-styled.div
          classname="mock-css. mock-css. mock-css. mock-css."
        >
          <div
            class="mock-css.
  padding-left: 0.75rem;
  display: flex;
  align-items: center;
  border-radius: var(--default-border-radius) 0 0 var(--default-border-radius);
  cursor: pointer;

  , {
    color: var(--color-white);
  }
"
            data-testid="close-icon"
          >
            <mock-styled.span
              classname="mock-css.
  font-size: 1.5rem;
"
              style="font-size: 1.25rem;"
            >
              <svg
                style="font-size: 1.25rem;"
              />
            </mock-styled.span>
          </div>
          <div
            class="mock-css.
  padding: 0.75rem;
  transition: 0.5s;
  width: 100%;
  color: var(--color-black);
  font-size: var(--font-size-default);
"
          >
            No appointments
          </div>
        </mock-styled.div>
      </div>
    </mock-styled.div>
    <div
      class="mock-css.
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: -1;
  transition: 0.35s;

  @media (min-width: 769px) {
    width: ,;
  }
"
    />
    <div
      class="mock-css.
  position: fixed;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  height: auto;
  max-height: 100%;
  overflow: scroll;
  background: white;
  box-shadow: 2px 4px 20px rgba(0, 0, 0, 0.05);
  padding-bottom: ,;
  transition: 0.35s;
  opacity: 0;
  transform: translateY(100%);
  z-index: -2;
  -ms-overflow-style: none;
  scrollbar-width: none;

  &::-webkit-scrollbar {
    display: none;
  }

  @media (min-width: 769px) {
    width: ,;
  }
"
    />
    <mock-styled.div>
      <mock-styled.div
        classname=""
      />
      <mock-styled.div
        classname=""
      >
        <mock-styled.div>
          <mock-styled.input
            checked="true"
            id="travel-mode"
            type="checkbox"
          />
          <mock-styled.label
            htmlfor="travel-mode"
          >
            <img
              src="[object Object]"
            />
            <img
              src="[object Object]"
            />
          </mock-styled.label>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.h2
            classname="mock-css."
          >
            ETA
          </mock-styled.h2>
          <p />
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.h2
            classname="mock-css."
          >
            Distance
          </mock-styled.h2>
          <p />
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.button
            classname="mock-css."
            type="button"
          >
            <mock-styled.div />
            Start Journey
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`appointment Apppointment should match snapshot with data 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
       
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.h2
            classname="mock-css."
          >
            Location
          </mock-styled.h2>
          <mock-styled.div>
            <mock-styled.button
              classname="mock-css."
            >
              <mock-styled.div />
              MAP
            </mock-styled.button>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.input
                classname=""
                placeholder="Enter location"
                value=""
              />
            </mock-styled.div>
            <mock-styled.div
              classname=""
            />
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname="mock-css."
      >
        <mock-styled.div
          classname="mock-css.
  margin: 0 auto;
"
        >
          <mock-styled.input
            id="today"
            name="appointment-time"
            type="radio"
            value="TODAY"
          />
          <mock-styled.label
            classname=""
            htmlfor="today"
          >
            <mock-styled.span>
              Today
            </mock-styled.span>
          </mock-styled.label>
          <mock-styled.input
            id="tomorrow"
            name="appointment-time"
            type="radio"
            value="TOMORROW"
          />
          <mock-styled.label
            classname=""
            htmlfor="tomorrow"
          >
            <mock-styled.span>
              Tomorrow
            </mock-styled.span>
          </mock-styled.label>
          <mock-styled.input
            id="week"
            name="appointment-time"
            type="radio"
            value="WEEK"
          />
          <mock-styled.label
            classname=""
            htmlfor="week"
          >
            <mock-styled.span>
              Week
            </mock-styled.span>
          </mock-styled.label>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname="mock-css.
  transform: translate3d(-100%, 0, 0);
  animation: slide-in 0.35s forwards;

  @keyframes slide-in {
    100% {
      transform: translate3d(0%, 0, 0);
    }
  }
"
      >
        <div
          class="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
"
        >
          <mock-styled.div
            classname="mock-css. mock-css. mock-css. mock-css."
          >
            <div
              class="mock-css.
  padding-left: 0.75rem;
  display: flex;
  align-items: center;
  border-radius: var(--default-border-radius) 0 0 var(--default-border-radius);
  cursor: pointer;

  , {
    color: var(--color-white);
  }
"
              data-testid="close-icon"
            >
              <mock-styled.span
                classname="mock-css.
  font-size: 1.5rem;
"
                style="font-size: 1.25rem;"
              >
                <svg
                  style="font-size: 1.25rem;"
                />
              </mock-styled.span>
            </div>
            <div
              class="mock-css.
  padding: 0.75rem;
  transition: 0.5s;
  width: 100%;
  color: var(--color-black);
  font-size: var(--font-size-default);
"
            >
              No appointments
            </div>
          </mock-styled.div>
        </div>
      </mock-styled.div>
      <div
        class="mock-css.
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: -1;
  transition: 0.35s;

  @media (min-width: 769px) {
    width: ,;
  }
"
      />
      <div
        class="mock-css.
  position: fixed;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  height: auto;
  max-height: 100%;
  overflow: scroll;
  background: white;
  box-shadow: 2px 4px 20px rgba(0, 0, 0, 0.05);
  padding-bottom: ,;
  transition: 0.35s;
  opacity: 0;
  transform: translateY(100%);
  z-index: -2;
  -ms-overflow-style: none;
  scrollbar-width: none;

  &::-webkit-scrollbar {
    display: none;
  }

  @media (min-width: 769px) {
    width: ,;
  }
"
      />
      <mock-styled.div>
        <mock-styled.div
          classname=""
        />
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.input
              checked="true"
              id="travel-mode"
              type="checkbox"
            />
            <mock-styled.label
              htmlfor="travel-mode"
            >
              <img
                src="[object Object]"
              />
              <img
                src="[object Object]"
              />
            </mock-styled.label>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.h2
              classname="mock-css."
            >
              ETA
            </mock-styled.h2>
            <p />
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.h2
              classname="mock-css."
            >
              Distance
            </mock-styled.h2>
            <p />
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.button
              classname="mock-css."
              type="button"
            >
              <mock-styled.div />
              Start Journey
            </mock-styled.button>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
     
    <mock-styled.div>
      <mock-styled.div>
        <mock-styled.h2
          classname="mock-css."
        >
          Location
        </mock-styled.h2>
        <mock-styled.div>
          <mock-styled.button
            classname="mock-css."
          >
            <mock-styled.div />
            MAP
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.input
              classname=""
              placeholder="Enter location"
              value=""
            />
          </mock-styled.div>
          <mock-styled.div
            classname=""
          />
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
    <mock-styled.div
      classname="mock-css."
    >
      <mock-styled.div
        classname="mock-css.
  margin: 0 auto;
"
      >
        <mock-styled.input
          id="today"
          name="appointment-time"
          type="radio"
          value="TODAY"
        />
        <mock-styled.label
          classname=""
          htmlfor="today"
        >
          <mock-styled.span>
            Today
          </mock-styled.span>
        </mock-styled.label>
        <mock-styled.input
          id="tomorrow"
          name="appointment-time"
          type="radio"
          value="TOMORROW"
        />
        <mock-styled.label
          classname=""
          htmlfor="tomorrow"
        >
          <mock-styled.span>
            Tomorrow
          </mock-styled.span>
        </mock-styled.label>
        <mock-styled.input
          id="week"
          name="appointment-time"
          type="radio"
          value="WEEK"
        />
        <mock-styled.label
          classname=""
          htmlfor="week"
        >
          <mock-styled.span>
            Week
          </mock-styled.span>
        </mock-styled.label>
      </mock-styled.div>
    </mock-styled.div>
    <mock-styled.div
      classname="mock-css.
  transform: translate3d(-100%, 0, 0);
  animation: slide-in 0.35s forwards;

  @keyframes slide-in {
    100% {
      transform: translate3d(0%, 0, 0);
    }
  }
"
    >
      <div
        class="mock-css.
  @keyframes fade-in {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-delay: 0.1s;
  animation-name: fade-in;
"
      >
        <mock-styled.div
          classname="mock-css. mock-css. mock-css. mock-css."
        >
          <div
            class="mock-css.
  padding-left: 0.75rem;
  display: flex;
  align-items: center;
  border-radius: var(--default-border-radius) 0 0 var(--default-border-radius);
  cursor: pointer;

  , {
    color: var(--color-white);
  }
"
            data-testid="close-icon"
          >
            <mock-styled.span
              classname="mock-css.
  font-size: 1.5rem;
"
              style="font-size: 1.25rem;"
            >
              <svg
                style="font-size: 1.25rem;"
              />
            </mock-styled.span>
          </div>
          <div
            class="mock-css.
  padding: 0.75rem;
  transition: 0.5s;
  width: 100%;
  color: var(--color-black);
  font-size: var(--font-size-default);
"
          >
            No appointments
          </div>
        </mock-styled.div>
      </div>
    </mock-styled.div>
    <div
      class="mock-css.
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: -1;
  transition: 0.35s;

  @media (min-width: 769px) {
    width: ,;
  }
"
    />
    <div
      class="mock-css.
  position: fixed;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  height: auto;
  max-height: 100%;
  overflow: scroll;
  background: white;
  box-shadow: 2px 4px 20px rgba(0, 0, 0, 0.05);
  padding-bottom: ,;
  transition: 0.35s;
  opacity: 0;
  transform: translateY(100%);
  z-index: -2;
  -ms-overflow-style: none;
  scrollbar-width: none;

  &::-webkit-scrollbar {
    display: none;
  }

  @media (min-width: 769px) {
    width: ,;
  }
"
    />
    <mock-styled.div>
      <mock-styled.div
        classname=""
      />
      <mock-styled.div
        classname=""
      >
        <mock-styled.div>
          <mock-styled.input
            checked="true"
            id="travel-mode"
            type="checkbox"
          />
          <mock-styled.label
            htmlfor="travel-mode"
          >
            <img
              src="[object Object]"
            />
            <img
              src="[object Object]"
            />
          </mock-styled.label>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.h2
            classname="mock-css."
          >
            ETA
          </mock-styled.h2>
          <p />
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.h2
            classname="mock-css."
          >
            Distance
          </mock-styled.h2>
          <p />
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.button
            classname="mock-css."
            type="button"
          >
            <mock-styled.div />
            Start Journey
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
